module9/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mypod
  labels:
    run: mypod
spec:
  ports:
  - port: 9019
    protocol: TCP
  selector:
    run: mypod
